Powerups renamed to spring. Badges started

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <canvas id="myCanvas" width="500" height="800"></canvas>
     <script src="js/createjs.min.js"></script>
-    <script src="js/Powerup.js"></script>
+    <script src="js/Spring.js"></script>
     <script src='js/Player.js'></script>
     <script src='js/Platform.js'></script>
     <script src='js/game.js'></script>
