Finished badges, sounds etc

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="js/Spring.js"></script>
     <script src='js/Player.js'></script>
     <script src='js/Platform.js'></script>
+    <script src='js/Badge.js'></script>
     <script src='js/game.js'></script>
   </body>
 </html>
