--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <canvas id="myCanvas" width="500" height="800"></canvas>
+    <a href="moon-jumper.zip">Zip file</a>
     <script src="js/createjs.min.js"></script>
     <script src="js/Spring.js"></script>
     <script src='js/Player.js'></script>
