added report to the page as well

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <canvas id="myCanvas" width="500" height="800"></canvas>
-    <a href="moon-jumper.zip">Zip file</a>
+    <a href="moon-jumper.zip">Zip file</a> <a href="Moon_Jumper_Martin_Arusalu.pdf">Report</a>
     <script src="js/createjs.min.js"></script>
     <script src="js/Spring.js"></script>
     <script src='js/Player.js'></script>
