Implement fb instant gaming

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!doctype html>
-<html lang='en'>
+<html>
   <head>
     <meta charset='utf-8'>
-    <title>Jump</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, minimum-scale=1.0, shrink-to-fit=no, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="full-screen" content="yes"/>
+    <meta name="screen-orientation" content="portrait"/>
     <link rel='stylesheet' href='css/style.css'>
   </head>
   <body>
     <canvas id="myCanvas" width="500" height="800"></canvas>
-    <a href="moon-jumper.zip">Zip file</a> <a href="Moon_Jumper_Martin_Arusalu.pdf">Report</a>
+    <!-- build:js -->
+    <script src="js/mock/fbinstant.6.0.mock.js"></script>
+    <!-- endbuild -->
     <script src="js/createjs.min.js"></script>
     <script src="js/Spring.js"></script>
     <script src='js/Player.js'></script>
