--- a/index.html
+++ b/index.html
@@ -10,14 +10,28 @@
   </head>
   <body>
     <canvas id="myCanvas" width="500" height="800"></canvas>
-    <!-- build:js -->
-    <script src="js/mock/fbinstant.6.0.mock.js"></script>
-    <!-- endbuild -->
-    <script src="js/createjs.min.js"></script>
-    <script src="js/Spring.js"></script>
-    <script src='js/Player.js'></script>
-    <script src='js/Platform.js'></script>
-    <script src='js/Badge.js'></script>
-    <script src='js/game.js'></script>
+    <script src="./js/mock/fbinstant.6.0.mock.js"></script>
+    <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
+    <script type="module">
+      import game from './js/Game.js';
+
+      function init() {
+        FBInstant.initializeAsync()
+          .then(function () {
+            game.load();
+
+            FBInstant.startGameAsync()
+              .then(function () {
+                createjs.Ticker.addEventListener('tick', game.onTick);
+                createjs.Ticker.setFPS(60);
+                window.addEventListener('deviceorientation', game.tilt);
+              });
+          });
+      }
+
+      window.onload = init;
+      window.onkeydown = game.keyDown;
+      window.onkeyup = game.keyUp;
+    </script>
   </body>
 </html>
